# Cirrhosis-Survival-MLops

./: .gitignore  Dockerfile  README.md  model.py  pyproject.toml  requirements.txt  sample.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: results.csv
liver_cirrhosis_model/: model.py
notebooks/: final_model.ipynb
