[tool.poetry]
name = "liver-cirrhosis-model"
version = "0.1.0"
description = "Cirrhosis patient survival prediction"
authors = ["me"]
packages = [
    { include = "liver_cirrhosis_model" }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1"
numpy = "^1.27"
scikit-learn = "^1.3"
catboost = "^1.2"
optuna = "^3.3"
joblib = "^1.3"

[tool.poetry.scripts]
train-model = "model:main_train"
predict-model = "model:main_predict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"